--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "dependencies": {
     "pinia": "^2.0.13",
@@ -16,6 +17,8 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.27",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -29,6 +32,7 @@
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.0",
+    "jest": "^28.1.0",
     "prettier": "^2.5.1",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
